feat: add html structure

--- a/view/index.html
+++ b/view/index.html
@@ -7,6 +7,19 @@
   <title>IP Address Tracker</title>
 </head>
 <body>
-  
+  <div class="header">
+    <div class="searchIp">
+      <input type="text">
+    </div>
+  </div>
+  <div class="infoBar">
+    <div class="ipAddress infoBar__infoCard"></div>
+    <div class="location infoBar__infoCard"></div>
+    <div class="timezone infoBar__infoCard"></div>
+    <div class="isp infoBar__infoCard"></div>
+  </div>
+  <div class="map">
+    <div class="map__container"></div>
+  </div>
 </body>
 </html>
