refractor: mod html structure

--- a/view/index.html
+++ b/view/index.html
@@ -8,15 +8,31 @@
 </head>
 <body>
   <div class="header">
+    <h1>IP ADDRESS TRACKER</h1>
     <div class="searchIp">
       <input type="text">
+      <input type="button" value=">">
     </div>
   </div>
   <div class="infoBar">
-    <div class="ipAddress infoBar__infoCard"></div>
-    <div class="location infoBar__infoCard"></div>
-    <div class="timezone infoBar__infoCard"></div>
-    <div class="isp infoBar__infoCard"></div>
+    <div class="ipAddress infoBar__infoCard">
+      <p>192.212.174.101</p>
+    </div>
+    <div class="location infoBar__infoCard">
+      <p>
+        Brookly, NY 10001
+      </p>
+    </div>
+    <div class="timezone infoBar__infoCard">
+      <p>
+        UTC -05:00
+      </p>
+    </div>
+    <div class="isp infoBar__infoCard">
+      <p>
+        Space X Starlink
+      </p>
+    </div>
   </div>
   <div class="map">
     <div class="map__container"></div>
