--- a/view/index.html
+++ b/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -13,7 +13,7 @@
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""
     ></script>
-    
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,23 +23,15 @@
     <div class="header">
       <h1>IP ADDRESS TRACKER</h1>
       <div class="searchIp">
-        <input type="text" placeholder="Enter your IP address here"/>
+        <input type="text" placeholder="Enter your IP address here" />
         <input type="button" value=">" />
       </div>
     </div>
     <div class="infoBar">
-      <div class="ipAddress infoBar__infoCard">
-        <p>192.212.174.101</p>
-      </div>
-      <div class="location infoBar__infoCard">
-        <p>Brookly, NY 10001</p>
-      </div>
-      <div class="timezone infoBar__infoCard">
-        <p>UTC -05:00</p>
-      </div>
-      <div class="isp infoBar__infoCard">
-        <p>Space X Starlink</p>
-      </div>
+      <div class="ipAddress infoBar__infoCard"></div>
+      <div class="location infoBar__infoCard"></div>
+      <div class="timezone infoBar__infoCard"></div>
+      <div class="isp infoBar__infoCard"></div>
     </div>
     <div id="map"></div>
   </body>
