--- a/view/index.html
+++ b/view/index.html
@@ -24,14 +24,32 @@
       <h1>IP ADDRESS TRACKER</h1>
       <div class="searchIp">
         <input type="text" placeholder="Enter your IP address here" />
-        <input type="button" value=">" />
+        <button>
+          <img src="../images/icon-arrow.svg" alt="arrow" />
+        </button>
       </div>
     </div>
     <div class="infoBar">
-      <div class="ipAddress infoBar__infoCard"></div>
-      <div class="location infoBar__infoCard"></div>
-      <div class="timezone infoBar__infoCard"></div>
-      <div class="isp infoBar__infoCard"></div>
+      <div class="ipAddress infoBar__infoCard">
+        <p></p>
+        <h1>
+        </h1>
+      </div>
+      <div class="location infoBar__infoCard">
+        <p></p>
+        <h1>
+        </h1>
+      </div>
+      <div class="timezone infoBar__infoCard">
+        <p></p>
+        <h1>
+        </h1>
+      </div>
+      <div class="isp infoBar__infoCard">
+        <p></p>
+        <h1>
+        </h1>
+      </div>
     </div>
     <div id="map"></div>
   </body>
