--- a/view/index.css
+++ b/view/index.css
@@ -1,13 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
 /* font-family: 'Rubik', sans-serif; */
 
 #map {
   height: 600px;
 }
 
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 /* root-relative design pattern */
 html {
-  font-size: 20px;
+  box-sizing: border-box;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  margin: 0;
 }
 :root {
   --Very-Dark-Gray: hsl(0, 0%, 17%);
@@ -28,43 +40,47 @@ html {
 /* write media query for desktops */
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   html {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
-.header{
-    background-image: url("../images/pattern-bg-desktop.png");
+.header {
+  background-image: url("../images/pattern-bg-desktop.png");
 }
-.header > h1{
-    color:azure;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
+.header > h1 {
+  color: azure;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
 }
-.searchIp > input{
-    border-radius: 5px 0 0 5px;
-    border: none;
-    padding: 10px;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 400;
+.searchIp > input {
+  border-radius: 5px 0 0 5px;
+  border: none;
+  padding: 10px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
 }
-.searchIp > button{
-    border-radius: 0 5px 5px 0;
-    border: none;
-    padding: 10px;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    background-color: var(--Very-Dark-Gray);
-    color: azure;
+.searchIp > button {
+  border-radius: 0 5px 5px 0;
+  border: none;
+  padding: 10px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  background-color: var(--Very-Dark-Gray);
+  color: azure;
 }
-.infoBar__infoCard > p{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 0.7rem;
-    color: var(--Dark-Gray);
+.searchIp > button::placeholder {
+  color: var(--Dark-Gray);
+  font-size: 1rem;
 }
-.infoBar__infoCard > h1{
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: var(--Very-Dark-Gray);
+.infoBar__infoCard > p {
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  font-size: 0.7rem;
+  color: var(--Dark-Gray);
+}
+.infoBar__infoCard > h1 {
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: var(--Very-Dark-Gray);
 }
