refractor: mod for CSR

--- a/view/index.html
+++ b/view/index.html
@@ -31,19 +31,22 @@
     </div>
     <div class="infoBar">
       <div class="ipAddress infoBar__infoCard">
-        <p></p>
+        <p>IP address</p>
         <h1></h1>
       </div>
+      <hr>
       <div class="location infoBar__infoCard">
-        <p></p>
+        <p>Location</p>
         <h1></h1>
       </div>
+      <hr>
       <div class="timezone infoBar__infoCard">
-        <p></p>
+        <p>Timezone</p>
         <h1></h1>
       </div>
+      <hr>
       <div class="isp infoBar__infoCard">
-        <p></p>
+        <p>ISP</p>
         <h1></h1>
       </div>
     </div>
